--- a/src/Vavatech.Shop/MetalDesignWpfClient/MainWindow.xaml
+++ b/src/Vavatech.Shop/MetalDesignWpfClient/MainWindow.xaml
@@ -2,8 +2,8 @@
     x:Class="MetalDesignWpfClient.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:ap="clr-namespace:MetalDesignWpfClient.AttachedProperty"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:MetalDesignWpfClient"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="clr-namespace:MetalDesignWpfClient.ViewModels"
@@ -94,6 +94,15 @@
 
                 </TextBox>
 
+                <TextBox
+                    Margin="10"
+                    ap:Numeric.IsNumeric="True"
+                    materialDesign:HintAssist.Hint="Number" />
+
+                <TextBox
+                    Margin="10"
+                    ap:Mask.Format="^a{d3}$"
+                    materialDesign:HintAssist.Hint="Text" />
 
                 <TextBox Margin="10" />
 
