--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/CustomerView.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/CustomerView.xaml
@@ -1,14 +1,16 @@
-﻿<Page x:Class="Vavatech.Shop.WpfClient.Views.CustomerView"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Vavatech.Shop.WpfClient.Views"
-      DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=CustomerViewModel}"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      KeepAlive="True"
-      Title="CustomerView">
+﻿<Page
+    x:Class="Vavatech.Shop.WpfClient.Views.CustomerView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Vavatech.Shop.WpfClient.Views"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="CustomerView"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=CustomerViewModel}"
+    KeepAlive="True"
+    mc:Ignorable="d">
 
     <Grid>
 
@@ -27,22 +29,37 @@
                 <TextBox Text="{Binding SelectedCustomer.LastName}" />
 
 
+
+                <Label>Lat</Label>
+
+                <TextBlock Text="{Binding SelectedCustomer.Location.Latitude, IsAsync=True, FallbackValue='Positioning...'}" />
+
+                <Label>Lng</Label>
+
+                <TextBlock Text="{Binding SelectedCustomer.Location.Longitude, IsAsync=True, FallbackValue='Positioning...'}" />
+
+
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition />
                         <ColumnDefinition />
                     </Grid.ColumnDefinitions>
-                    
-                    <Button Command="{Binding BackCommand}">Back</Button>
-                    <Button Command="{Binding NextCommand}" Grid.Column="1">Next</Button>
+
+                    <Button Background="DarkBlue" Command="{Binding BackCommand}">Back</Button>
+                    <Button
+                        Grid.Column="1"
+                        Background="DarkBlue"
+                        Command="{Binding NextCommand}">
+                        Next
+                    </Button>
                 </Grid>
-                            
-                
+
+
             </StackPanel>
 
-           
+
 
         </DockPanel>
-        
+
     </Grid>
 </Page>
