--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/DragDropCustomersView.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/DragDropCustomersView.xaml
@@ -2,15 +2,21 @@
     x:Class="Vavatech.Shop.WpfClient.Views.DragDropCustomersView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:c="clr-namespace:Vavatech.Shop.WpfClient.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:local="clr-namespace:Vavatech.Shop.WpfClient.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:me="clr-namespace:Vavatech.Shop.WpfClient.MarkupExtensions"
     Title="DragDropCustomersView"
     d:DesignHeight="450"
     d:DesignWidth="800"
     DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=DragDropCustomersViewModel}"
     mc:Ignorable="d">
+
+    <Page.Resources>
+        <c:DragEventArgsConverter x:Key="DragEventArgsConverter" />
+    </Page.Resources>
 
     <Grid>
 
@@ -28,13 +34,23 @@
 
             <ListBox
                 Grid.Column="0"
+                AllowDrop="True"
                 DisplayMemberPath="FullName"
                 ItemsSource="{Binding SourceCustomers}"
+                MouseMove="{me:MouseMoveMarkup}"
                 SelectedItem="{Binding SelectedCustomer}">
 
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="MouseDoubleClick">
                         <i:InvokeCommandAction Command="{Binding AddCustomerCommand}" />
+                    </i:EventTrigger>
+
+
+                    <i:EventTrigger EventName="Drop">
+                        <i:InvokeCommandAction
+                            Command="{Binding DropRemoveCustomerCommand}"
+                            EventArgsConverter="{StaticResource DragEventArgsConverter}"
+                            PassEventArgsToCommand="True" />
                     </i:EventTrigger>
 
                 </i:Interaction.Triggers>
@@ -55,13 +71,22 @@
 
             <ListBox
                 Grid.Column="2"
+                AllowDrop="True"
                 DisplayMemberPath="FullName"
                 ItemsSource="{Binding TargetCustomers}"
+                MouseMove="{me:MouseMoveMarkup}"
                 SelectedItem="{Binding SelectedCustomer}">
 
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="MouseDoubleClick">
                         <i:InvokeCommandAction Command="{Binding RemoveCustomerCommand}" />
+                    </i:EventTrigger>
+
+                    <i:EventTrigger EventName="Drop">
+                        <i:InvokeCommandAction
+                            Command="{Binding DropAddCustomerCommand}"
+                            EventArgsConverter="{StaticResource DragEventArgsConverter}"
+                            PassEventArgsToCommand="True" />
                     </i:EventTrigger>
 
                 </i:Interaction.Triggers>
