--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/DragDropCustomersView.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/DragDropCustomersView.xaml
@@ -8,6 +8,7 @@
     xmlns:local="clr-namespace:Vavatech.Shop.WpfClient.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:me="clr-namespace:Vavatech.Shop.WpfClient.MarkupExtensions"
+    xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
     Title="DragDropCustomersView"
     d:DesignHeight="450"
     d:DesignWidth="800"
@@ -15,7 +16,13 @@
     mc:Ignorable="d">
 
     <Page.Resources>
-        <c:DragEventArgsConverter x:Key="DragEventArgsConverter" />
+        <!--<c:DragEventArgsConverter x:Key="DragEventArgsConverter" />-->
+
+        <CollectionViewSource x:Key="SourceCustomersViewSource" Source="{Binding SourceCustomers}">
+            <CollectionViewSource.SortDescriptions>
+                <scm:SortDescription PropertyName="FullName" />
+            </CollectionViewSource.SortDescriptions>
+        </CollectionViewSource>
     </Page.Resources>
 
     <Grid>
@@ -36,7 +43,7 @@
                 Grid.Column="0"
                 AllowDrop="True"
                 DisplayMemberPath="FullName"
-                ItemsSource="{Binding SourceCustomers}"
+                ItemsSource="{Binding Source={StaticResource SourceCustomersViewSource}}"
                 MouseMove="{me:MouseMoveMarkup}"
                 SelectedItem="{Binding SelectedCustomer}">
 
@@ -49,7 +56,7 @@
                     <i:EventTrigger EventName="Drop">
                         <i:InvokeCommandAction
                             Command="{Binding DropRemoveCustomerCommand}"
-                            EventArgsConverter="{StaticResource DragEventArgsConverter}"
+                            EventArgsConverter="{c:DragEventArgsConverter}"
                             PassEventArgsToCommand="True" />
                     </i:EventTrigger>
 
@@ -85,7 +92,7 @@
                     <i:EventTrigger EventName="Drop">
                         <i:InvokeCommandAction
                             Command="{Binding DropAddCustomerCommand}"
-                            EventArgsConverter="{StaticResource DragEventArgsConverter}"
+                            EventArgsConverter="{c:DragEventArgsConverter}"
                             PassEventArgsToCommand="True" />
                     </i:EventTrigger>
 
