--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/CustomerView.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/CustomerView.xaml
@@ -4,7 +4,9 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Vavatech.Shop.WpfClient.Views"
+    xmlns:m="clr-namespace:Vavatech.Shop.ViewModels"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:me="clr-namespace:Vavatech.Shop.WpfClient.MarkupExtensions"
     Title="CustomerView"
     d:DesignHeight="450"
     d:DesignWidth="800"
@@ -37,6 +39,9 @@
                 <Label>Lng</Label>
 
                 <TextBlock Text="{Binding SelectedCustomer.Location.Longitude, IsAsync=True, FallbackValue='Positioning...'}" />
+
+
+                <ComboBox ItemsSource="{Binding Source={me:EnumSource {x:Type m:CustomerType}}}" SelectedValue="{Binding SelectedCustomer.CustomerType}" />
 
 
                 <Grid>
