--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/CustomerView.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/CustomerView.xaml
@@ -4,15 +4,27 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Vavatech.Shop.WpfClient.Views"
-    xmlns:m="clr-namespace:Vavatech.Shop.ViewModels"
+    xmlns:m="clr-namespace:Vavatech.Shop.Models;assembly=Vavatech.Shop.Models"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:me="clr-namespace:Vavatech.Shop.WpfClient.MarkupExtensions"
+    xmlns:system="clr-namespace:System;assembly=mscorlib"
     Title="CustomerView"
     d:DesignHeight="450"
     d:DesignWidth="800"
     DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=CustomerViewModel}"
     KeepAlive="True"
     mc:Ignorable="d">
+
+    <Page.Resources>
+        <ObjectDataProvider
+            x:Key="CustomerTypes"
+            MethodName="GetValues"
+            ObjectType="{x:Type system:Enum}">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="m:CustomerType" />
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
+    </Page.Resources>
 
     <Grid>
 
@@ -41,7 +53,15 @@
                 <TextBlock Text="{Binding SelectedCustomer.Location.Longitude, IsAsync=True, FallbackValue='Positioning...'}" />
 
 
-                <ComboBox ItemsSource="{Binding Source={me:EnumSource {x:Type m:CustomerType}}}" SelectedValue="{Binding SelectedCustomer.CustomerType}" />
+                <ComboBox
+                    Margin="10"
+                    ItemsSource="{me:EnumSource m:CustomerType}"
+                    SelectedValue="{Binding SelectedCustomer.CustomerType}" />
+
+                <ComboBox
+                    Margin="10"
+                    ItemsSource="{Binding Source={StaticResource CustomerTypes}}"
+                    SelectedValue="{Binding SelectedCustomer.CustomerType}" />
 
 
                 <Grid>
