--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/DragDropCustomersView.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/DragDropCustomersView.xaml
@@ -9,6 +9,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:me="clr-namespace:Vavatech.Shop.WpfClient.MarkupExtensions"
     xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
+    xmlns:ap="clr-namespace:Vavatech.Shop.WpfClient.AttachedProperties"
+    xmlns:b="clr-namespace:Vavatech.Shop.WpfClient.Behaviors"
     Title="DragDropCustomersView"
     d:DesignHeight="450"
     d:DesignWidth="800"
@@ -81,8 +83,10 @@
                 AllowDrop="True"
                 DisplayMemberPath="FullName"
                 ItemsSource="{Binding TargetCustomers}"
-                MouseMove="{me:MouseMoveMarkup}"
-                SelectedItem="{Binding SelectedCustomer}">
+                ap:IsDragDropAttachedProperty.IsDragDrop="True"
+                SelectedItem="{Binding SelectedCustomer}"
+               
+                >
 
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="MouseDoubleClick">
@@ -97,6 +101,10 @@
                     </i:EventTrigger>
 
                 </i:Interaction.Triggers>
+
+                <!--<i:Interaction.Behaviors>
+                    <b:MouseMoveBehavior />
+                </i:Interaction.Behaviors>-->
 
             </ListBox>
 
