--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/ShellView.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/ShellView.xaml
@@ -325,6 +325,14 @@
                     </DockPanel>
                 </Button>
 
+
+                <Button Command="{Binding ShowViewCommand}" CommandParameter="Dispatcher">
+                    <DockPanel>
+                        <Image DockPanel.Dock="Left" Source="{StaticResource SettingImage}" />
+                        <TextBlock VerticalAlignment="Center">Dispatcher</TextBlock>
+                    </DockPanel>
+                </Button>
+
             </StackPanel>
 
 
